fix(checkbox): remove extra gap

--- a/src/components/checkbox/themes/shared/checkbox/checkbox.material.scss
+++ b/src/components/checkbox/themes/shared/checkbox/checkbox.material.scss
@@ -52,8 +52,6 @@ label {
 }
 
 [part~='base'] {
-    gap: rem(8px);
-
     &:hover {
         [part~='control'] {
             &::before {
